# mcp-wordle-python

./: .dockerignore  .gitattributes  Dockerfile  README.md  fastmcp.json  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish-image.yml
src/mcp_wordle/: main.py
